--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,7 @@
     <string name="no_answer">You haven\'t answered</string>
     <string name="submission_total">Questions Submitted %1s</string>
     <string name="questions_title">Questions</string>
+    <string name="retry">Retry</string>
+    <string name="success">SUCCESS</string>
+    <string name="fail">FAILURE</string>
 </resources>
