--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,13 @@
 <resources>
     <string name="app_name">QuestionsApp</string>
-    <string name="submit_btn_txt">Submit</string>
     <string name="no_answer">You haven\'t answered</string>
-    <string name="submission_total">Questions Submitted %1s</string>
+    <string name="submission_total">Questions Submitted : %1s</string>
     <string name="questions_title">Questions</string>
     <string name="retry">Retry</string>
     <string name="success">SUCCESS</string>
     <string name="fail">FAILURE</string>
+    <string name="start">Start Survey</string>
+    <string name="submit_btn_txt">Submit</string>
+    <string name="submitted">Already Submitted</string>
+
 </resources>
